# cultivate

./: README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/Zombie/: Zombie.cdi3.json  Zombie.moc3  Zombie.model3.json  Zombie.physics3.json  Zombie.vtube.json  items_pinned_to_model.json
app/src/main/assets/Zombie/expressions/: angry.exp3.json  black.exp3.json  clothe.exp3.json  hat.exp3.json  red.exp3.json  sad.exp3.json  symbol.exp3.json  talisman.exp3.json  tears.exp3.json  watermark.exp3.json
app/src/main/assets/Zombie/motions/: Zombie_idle.motion3.json
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/Live2D/kkk/: JniBridgeC.cpp  LAppDefine.cpp  LAppDelegate.cpp  LAppDelegate.hpp  LAppLive2DManager.cpp  LAppView.cpp  LAppView.hpp
app/src/main/java/com/example/cultivate/: MainActivity.kt  MyApplication.java
app/src/main/java/com/example/cultivate/adapter/: BindAdapters.kt  onClickTransferEvent.kt  taskListAdapter.kt
app/src/main/java/com/example/cultivate/live2d/: GLRenderer.java  JniBridgeJava.java
app/src/main/res/layout/: activity_for_service.xml  forum_module.xml  grownfragment.xml  mainview.xml  studyroom.xml  task_module.xml  tasklist.xml  tasklist_item.xml  tasklist_item_dialog.xml  tasksubmit.xml  tasksubmit_item.xml  tttaskactivity.xml  voicedialogue.xml
app/src/main/res/menu/: bottom_menu.xml  side_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: network_security_config.xml
gradle/wrapper/: gradle-wrapper.properties
(+50 files in other folders)
